--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "convex": "^1.13.0",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "openai": "^4.52.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
